fixed spacing between button and stats container

--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -436,7 +436,7 @@ body {
 }
 
 .statsContained {
-	height: 85%;
+	height: 72%;
 	width: 100%;
 	display: flex;
 	justify-content: center;
